tests/ui/higher-ranked/leak-check/candidate-from-env-universe-err-project.next.stderr
error[E0271]: type mismatch resolving `<T as Trait<'a>>::Assoc == usize`
  --> $DIR/candidate-from-env-universe-err-project.rs:38:24
   |
LL |     projection_bound::<T>();
   |                        ^ types differ
   |
note: required by a bound in `projection_bound`
  --> $DIR/candidate-from-env-universe-err-project.rs:19:42
   |
LL | fn projection_bound<T: for<'a> Trait<'a, Assoc = usize>>() {}
   |                                          ^^^^^^^^^^^^^ required by this bound in `projection_bound`

error[E0308]: mismatched types
  --> $DIR/candidate-from-env-universe-err-project.rs:52:68
   |
LL |     let _higher_ranked_norm: for<'a> fn(<T as Trait<'a>>::Assoc) = |_| ();
   |                              -----------------------------------   ^^^^^^ one type is more general than the other
   |                              |
   |                              expected due to this
   |
   = note: expected fn pointer `fn(usize)`
                 found closure `{closure@$DIR/candidate-from-env-universe-err-project.rs:52:68: 52:71}`
   = note: closure has signature: `fn(usize)`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
